--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@cacheable/node-cache": "^1.4.0",
     "audio-decode": "^2.1.3",
     "axios": "^1.3.3",
+    "chalk": "latest",
     "cache-manager": "4.0.1",
     "futoin-hkdf": "^1.5.1",
     "libphonenumber-js": "^1.10.20",
